--- a/Blackboard/app/src/main/res/values/strings.xml
+++ b/Blackboard/app/src/main/res/values/strings.xml
@@ -3,4 +3,8 @@
     <string name="login_number_label">学号</string>
     <string name="login_password_label">密码</string>
     <string name="login_button">登录</string>
+    <string name="board">通告板</string>
+    <string name="mine">我的</string>
+    <string name="board_message">最新通知</string>
+    <string name="board_organization">组织列表</string>
 </resources>
